[package]
edition = "2024"
name = "diy_game_pad"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
esp-idf-hal = { version = "0.46", features = ["adc-oneshot-legacy"] }
esp-idf-svc = "0.52"
esp-idf-sys = "0.37"
esp32-nimble = "0.12"
log = "0.4"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = "s"
